# nado-monitor

./: .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
client/: config.example.toml  pyproject.toml
client/install/: install-windows.ps1  install-wsl.sh  install.ps1  install.sh  nado-telemetry.service
client/src/nado_telemetry/: __init__.py  cli.py  config.py
client/src/nado_telemetry/collectors/: __init__.py  claude_tokens.py  processes.py  session_status.py  system.py
dashboard/: package-lock.json  package.json
dashboard/src/: App.tsx  constants.ts  main.tsx
dashboard/src/components/: HistoryChart.tsx  Layout.tsx  MachineCard.tsx  MetricGauge.tsx  ProcessList.tsx  SessionStatusPanel.tsx  StatusBadge.tsx  TokenUsageByProject.tsx  TokenUsageChart.tsx
dashboard/src/hooks/: useMachineHistory.ts  useMachines.ts  useTokenUsage.ts
dashboard/src/pages/: LoginPage.tsx  MachineDetailPage.tsx  OverviewPage.tsx
dashboard/src/services/: api.ts
dashboard/src/types/: index.ts
dashboard/src/utils/: pricing.ts  time.ts
server/: .env.example  requirements.txt
server/app/: config.py  database.py  dependencies.py  main.py  models.py  notifications.py  schemas.py  tasks.py
server/app/routers/: auth.py  machines.py  telemetry.py  token_usage.py
server/tests/: conftest.py  test_auth.py  test_machines.py  test_telemetry.py
